--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,16 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/design1.png
+    - assets/images/design2.png
+    - assets/images/design3.png
+    - assets/images/it1.png
+    - assets/images/it2.png
+    - assets/images/it3.png
+    - assets/images/slide.png
+
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
