--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ flutter:
     - assets/images/it2.png
     - assets/images/it3.png
     - assets/images/slide.png
+    - assets/fonts/
+    - assets/data/faculty.json
+
 
 
 
@@ -83,10 +86,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: Lato
+       fonts:
+         - asset: assets/fonts/Lato-Black.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
